# modev

./: modev.yaml  pyproject.toml
nbs/: core.py  simple.py  test.py
src/modev/: __init__.py  build.py  cli.py  core.py  simple.py
test/: core.py  simple.py
