[project]
name = "modev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ndendic", email = "ndendic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.12.8",
    "typer>=0.15.2",
]

[project.scripts]
modev = "modev.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
